fix: ajuste no código de acordo com sonar